--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -26,9 +26,9 @@
 </head>
 <body>
 
-    <h1>簡易翻訳サイト</h1>
-    <textarea id="inputText" placeholder="変換したい文字を入力してください。"></textarea><br><br>
-    <button onclick="convertText()">変換</button>
+    <h1>うんた語に変換すりゅよ</h1>
+    <textarea id="inputText" placeholder="変換したい文字を入力ちてね"></textarea><br><br>
+    <button onclick="convertText()">うんた語に変換</button>
 
     <div id="output"></div>
 
