--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>うんた語に変換すりゅよ</title>
+    <title>うんた語に変換すりゅよ(ver 1.0)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,12 +39,24 @@
             // 変換ルールを追加
             var rules = [
                 { search: 'ぁ', replace: 'ァ' },
+                { search: 'ぇ', replace: 'ェ' },
+                { search: 'し', replace: 'ち' },
                 { search: 'た', replace: 'ちゃ' },
                 { search: 'なつき', replace: 'なちゅき' },
                 { search: 'なくなった', replace: 'ないなった' },
                 { search: 'ら', replace: 'りゃ' },
                 { search: 'る', replace: 'りゅ' },
-                { search: 'れ', replace: 'りぇ' }
+                { search: 'れ', replace: 'りぇ' },
+                { search: 'ろ', replace: 'りょ' },
+                { search: 'ありが', replace: 'あいが' },
+                { search: 'すごい', replace: 'しゅごい' },
+                { search: 'こっそり', replace: 'こっしょり' },
+                { search: 'せ', replace: 'しぇ' },
+                { search: 'つ', replace: 'ちゅ' },
+                { search: 'おくすり', replace: 'おくちゅり' },
+                { search: 'た', replace: 'ちゃ' },
+                
+                
             ];
 
             // 変換処理
