--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-    <h1>うんた語に変換すりゅよ</h1>
+    <h1>うんた語に変換すりゅよ(ver 1.0)</h1>
     <textarea id="inputText" placeholder="変換したい文字を入力ちてね"></textarea><br><br>
     <button onclick="convertText()">うんた語に変換</button>
 
