--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -55,6 +55,10 @@
                 { search: 'つ', replace: 'ちゅ' },
                 { search: 'おくすり', replace: 'おくちゅり' },
                 { search: 'た', replace: 'ちゃ' },
+                { search: 'できた', replace: 'できちゃァ' },
+                { search: 'した', replace: 'しちゃァ' }
+
+
                 
                 
             ];
