--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -55,6 +55,8 @@
                 { search: 'つ', replace: 'ちゅ' },
                 { search: 'おくすり', replace: 'おくちゅり' },
                 { search: 'た', replace: 'ちゃ' },
+                { search: 'しんぱい', replace: 'しんぱい' },
+                { search: '心配した', replace: '心配しちゃァ' },
                 { search: 'できた', replace: 'できちゃァ' },
                 { search: 'した', replace: 'しちゃァ' }
 
