--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -38,27 +38,29 @@
 
             // 変換ルールを追加
             var rules = [
+                { search: 'うんた', replace: 'うんた' },
+                { search: 'なつき', replace: 'なちゅき' },
+                { search: 'なくなった', replace: 'ないなった' },
+                { search: 'おくすり', replace: 'おくちゅり' },
+                { search: 'ありが', replace: 'あいが' },
+                { search: 'すごい', replace: 'しゅごい' },
+                { search: 'こっそり', replace: 'こっしょり' },
+                { search: 'しんぱい', replace: 'しんぱい' },
+                { search: '心配した', replace: '心配しちゃァ' },
+                { search: 'できた', replace: 'できちゃァ' },
+                { search: 'した', replace: 'しちゃァ' },
                 { search: 'ぁ', replace: 'ァ' },
                 { search: 'ぇ', replace: 'ェ' },
                 { search: 'し', replace: 'ち' },
                 { search: 'た', replace: 'ちゃ' },
-                { search: 'なつき', replace: 'なちゅき' },
-                { search: 'なくなった', replace: 'ないなった' },
                 { search: 'ら', replace: 'りゃ' },
                 { search: 'る', replace: 'りゅ' },
                 { search: 'れ', replace: 'りぇ' },
                 { search: 'ろ', replace: 'りょ' },
-                { search: 'ありが', replace: 'あいが' },
-                { search: 'すごい', replace: 'しゅごい' },
-                { search: 'こっそり', replace: 'こっしょり' },
                 { search: 'せ', replace: 'しぇ' },
                 { search: 'つ', replace: 'ちゅ' },
                 { search: 'おくすり', replace: 'おくちゅり' },
-                { search: 'た', replace: 'ちゃ' },
-                { search: 'しんぱい', replace: 'しんぱい' },
-                { search: '心配した', replace: '心配しちゃァ' },
-                { search: 'できた', replace: 'できちゃァ' },
-                { search: 'した', replace: 'しちゃァ' }
+                { search: 'た', replace: 'ちゃ' }
 
 
                 
