--- a/test-conversion-to-unt.html
+++ b/test-conversion-to-unt.html
@@ -62,7 +62,11 @@
             // 🔸 変換しない文字列（例外リスト）
             var excludeList = [
                 'うんた',
-                
+                'ないなった',
+                'しちゃァ',
+                'できちゃァ',
+                'しゅごい',
+
             ];
 
             // 🔸 例外部分を保護する（プレースホルダで置き換え）
