--- a/test-conversion-to-unt.html
+++ b/test-conversion-to-unt.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-    <h1>うんた語に変換すりゅよ(test)</h1>
+    <h1>うんた語に変換すりゅよ(test 1.01)</h1>
     <textarea id="inputText" placeholder="変換したい文字を入力ちてね"></textarea><br><br>
     <button onclick="convertText()">うんた語に変換</button>
 
