--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -28,7 +28,7 @@
             border-top: 1px solid #ccc;
             font-size: 14px;
             color: #666;
-            text-align: center;
+            text-align: left;
         }
         footer a {
             color: #1da1f2;
