--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -127,7 +127,7 @@
             <li>ver 1.0 - 2025年3月12日: ページをつくっちゃァよ</li>
         </ul>
         <p>
-            👉 <a href="https://x.com/kuroneko_UG" target="_blank" rel="noopener noreferrer">ご意見・ご要望はこちらまで</a>
+            👉 <a href="https://x.com/kuroneko_UG" target="_blank" rel="noopener noreferrer">ご意見・ご要望はこちらまで(管理人Xに飛びます）</a>
         </p>
     </footer>
 
