--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -54,8 +54,9 @@
 
             // 🔸 変換防止リスト
             const blockList = [
-                'うんた', // すでに「うんた」は変換しない
-                'おくすり' // 「おくすり」は変換禁止
+                'うんた', 
+                'おくすり',
+                'ましまし'
             ];
 
             // 🔹 変換ルール
