--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -56,7 +56,8 @@
             const blockList = [
                 'うんた', 
                 'おくすり',
-                'ましまし'
+                'ましまし',
+                'しかし'
             ];
 
             // 🔹 変換ルール
