--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -126,9 +126,9 @@
         <p>更新履歴：</p>
         <ul>
             <li>ver 1.1 - 2025年3月13日:
-                変換機能を改善しちゃァよ。Xへのリンク・更新履歴を追加しちゃァよ</li>
+            <br>変換機能を改善しちゃァよ。Xへのリンク・更新履歴を追加しちゃァよ</li>
             <li>ver 1.0 - 2025年3月12日:
-                ページをつくっちゃァよ</li>
+            <br>ページをつくっちゃァよ</li>
         </ul>
         <p>
             👉 <a href="https://x.com/kuroneko_UG" target="_blank" rel="noopener noreferrer">ご意見・ご要望はこちらまで(管理人Xに飛びます）</a>
