--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -125,9 +125,9 @@
     <footer>
         <p>更新履歴：</p>
         <ul>
-            <li>ver 1.1 - 2025年3月13日:<br>
+            <li><b>ver 1.1 - 2025年3月13日</b><br>
             <br>変換機能を改善しちゃァよ。Xへのリンク・更新履歴を追加しちゃァよ</li>
-            <li>ver 1.0 - 2025年3月12日:<br>
+            <li><b>ver 1.0 - 2025年3月12日</b><br>
             <br>ページをつくっちゃァよ</li>
         </ul>
         <p>
