--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -123,11 +123,11 @@
     </script>
 
     <footer>
-        <p>更新履歴：</p>
+        <p>【更新履歴】</p>
         <ul>
-            <li><b>ver 1.1 - 2025年3月13日</b><br>
+            <li><b>ver 1.1 - 2025年3月13日</b>
             <br>変換機能を改善しちゃァよ。Xへのリンク・更新履歴を追加しちゃァよ</li>
-            <li><b>ver 1.0 - 2025年3月12日</b><br>
+            <li><b>ver 1.0 - 2025年3月12日</b>
             <br>ページをつくっちゃァよ</li>
         </ul>
         <p>
