--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -64,12 +64,13 @@
             const rules = [
                 { search: 'なつき', replace: 'なちゅき' },
                 { search: 'なくなった', replace: 'ないなった' },
+                { search: 'そういうの', replace: 'そゆの' },
                 { search: 'ありが', replace: 'あいが' },
                 { search: 'すごい', replace: 'しゅごい' },
                 { search: 'こっそり', replace: 'こっしょり' },
                 { search: '心配した', replace: '心配しちゃァ' },
                 { search: 'できた', replace: 'できちゃァ' },
-                { search: 'した', replace: 'しちゃァ' },
+                { search: 'したい', replace: 'ちたい' },
                 { search: 'ぁ', replace: 'ァ' },
                 { search: 'ぇ', replace: 'ェ' },
                 { search: 'し', replace: 'ち' },
