--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -71,6 +71,7 @@
                 { search: '心配した', replace: '心配しちゃァ' },
                 { search: 'できた', replace: 'できちゃァ' },
                 { search: 'したい', replace: 'ちたい' },
+                { search: 'したよ', replace: 'ちたよ' },
                 { search: 'ぁ', replace: 'ァ' },
                 { search: 'ぇ', replace: 'ェ' },
                 { search: 'し', replace: 'ち' },
