--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -72,6 +72,7 @@
                 { search: 'できた', replace: 'できちゃァ' },
                 { search: 'したい', replace: 'ちたい' },
                 { search: 'したよ', replace: 'ちたよ' },
+                { search: 'した', replace: 'ちた' },
                 { search: 'ぁ', replace: 'ァ' },
                 { search: 'ぇ', replace: 'ェ' },
                 { search: 'し', replace: 'ち' },
