--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -55,9 +55,9 @@
             // 🔸 変換防止リスト
             const blockList = [
                 'うんた', 
-                'おくすり',
                 'ましまし',
-                'しかし'
+                'しかし',
+                'たくさん'
             ];
 
             // 🔹 変換ルール
