--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-    <h2>うんた語に変換すりゅよ(ver 1.1)</h2>
+    <h2>うんた語に変換すりゅよ<br>(ver 1.1)</h2>
     <textarea id="inputText" placeholder="変換したい文字を入力ちてね"></textarea><br><br>
     <button onclick="convertText()">うんた語に変換</button>
 
