--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -54,7 +54,8 @@
 
             // 🔸 変換防止リスト
             const blockList = [
-                'うんた', 
+                'うんた',
+                'うんたた',
                 'ましまし',
                 'しかし',
                 'たくさん'
