--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -71,6 +71,7 @@
                 { search: 'こっそり', replace: 'こっしょり' },
                 { search: '心配した', replace: '心配しちゃァ' },
                 { search: 'できた', replace: 'できちゃァ' },
+                { search: 'すご', replace: 'しゅご' },
                 { search: 'したい', replace: 'ちたい' },
                 { search: 'したよ', replace: 'ちたよ' },
                 { search: 'した', replace: 'ちた' },
