--- a/test-conversion-to-unt.html
+++ b/test-conversion-to-unt.html
@@ -22,11 +22,27 @@
             width: 100%;
             height: 100px;
         }
+        footer {
+            margin-top: 30px;
+            padding-top: 10px;
+            border-top: 1px solid #ccc;
+            font-size: 14px;
+            color: #666;
+            text-align: left;
+        }
+        footer a {
+            color: #1da1f2;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
 
-    <h1>うんた語に変換すりゅよ(test 1.02)</h1>
+    <h2>うんた語に変換すりゅよ<br>(ver 1.1)</h2>
     <textarea id="inputText" placeholder="変換したい文字を入力ちてね"></textarea><br><br>
     <button onclick="convertText()">うんた語に変換</button>
 
@@ -38,20 +54,27 @@
 
             // 🔸 変換防止リスト
             const blockList = [
-                'うんた', // すでに「うんた」は変換しない
-                'おくすり' // 「おくすり」は変換禁止
+                'うんたた',
+                'うんた',
+                'ましまし',
+                'しかし',
+                'たくさん'
             ];
 
             // 🔹 変換ルール
             const rules = [
                 { search: 'なつき', replace: 'なちゅき' },
                 { search: 'なくなった', replace: 'ないなった' },
+                { search: 'そういうの', replace: 'そゆの' },
                 { search: 'ありが', replace: 'あいが' },
                 { search: 'すごい', replace: 'しゅごい' },
                 { search: 'こっそり', replace: 'こっしょり' },
                 { search: '心配した', replace: '心配しちゃァ' },
                 { search: 'できた', replace: 'できちゃァ' },
-                { search: 'した', replace: 'しちゃァ' },
+                { search: 'すご', replace: 'しゅご' },
+                { search: 'したい', replace: 'ちたい' },
+                { search: 'したよ', replace: 'ちたよ' },
+                { search: 'した', replace: 'ちた' },
                 { search: 'ぁ', replace: 'ァ' },
                 { search: 'ぇ', replace: 'ェ' },
                 { search: 'し', replace: 'ち' },
@@ -83,7 +106,6 @@
             rules.forEach((rule) => {
                 const regex = new RegExp(rule.search, 'g');
                 inputText = inputText.replace(regex, (match) => {
-                    // すでに変換済み or プレースホルダの場合はスキップ
                     if (Object.values(placeholders).includes(match)) {
                         return match;
                     }
@@ -104,6 +126,19 @@
             document.getElementById("output").textContent = inputText;
         }
     </script>
+
+    <footer>
+        <p>【更新履歴】</p>
+        <ul>
+            <li><b>ver 1.1 - 2025年3月13日</b>
+            <br>変換機能を改善しちゃァよ。Xへのリンク・更新履歴を追加しちゃァよ</li>
+            <li><b>ver 1.0 - 2025年3月12日</b>
+            <br>ページをつくっちゃァよ</li>
+        </ul>
+        <p>
+            👉 <a href="https://x.com/kuroneko_UG" target="_blank" rel="noopener noreferrer">ご意見・ご要望はこちらまで(管理人Xに飛びます）</a>
+        </p>
+    </footer>
 
 </body>
 </html>
