--- a/test-conversion-to-unt.html
+++ b/test-conversion-to-unt.html
@@ -49,7 +49,7 @@
     <div id="output"></div>
     
 <!-- コピー用のボタン追加 -->
-<button onclick="copyText()">変換結果をコピー</button>
+<button onclick="copyText()">コピーすりゅ</button>
     
     <script>
         function convertText() {
