--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -139,9 +139,9 @@
 
         // クリップボードにコピー
         navigator.clipboard.writeText(text).then(() => {
-            alert("コピーしました！");
+            alert("コピーちたよ！");
         }).catch(err => {
-            console.error('コピーに失敗しました: ', err);
+            console.error('コピー失敗しちゃ…: ', err);
         });
     }
     </script>
