--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -161,7 +161,7 @@
         <p>
             👉 <a href="https://x.com/kuroneko_UG" target="_blank" rel="noopener noreferrer">ご意見・ご要望はこちらまで(管理人Xに飛びます）</a>
         </p>
-        <p><b>※このサイトは非公式です。個人の活動の範囲内で楽ちんでね。</b></p>
+        <p><b>※このサイトは非公式です。個人の活動の範囲内でお楽しみください。</b></p>
     </footer>
 
 </body>
