--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -159,7 +159,7 @@
             <br>ページをつくっちゃァよ</li>
         </ul>
         <p>
-            👉 <a href="https://x.com/kuroneko_UG" target="_blank" rel="noopener noreferrer">ご意見・ご要望はこちらまで(管理人Xに飛びます）</a>
+            👉 <a href="https://x.com/kuroneko_UG/status/1899822289174118489" target="_blank" rel="noopener noreferrer">ご意見・ご要望はこちらまで(管理人Xに飛びます）</a>
         </p>
         <p><b>※このサイトは非公式です。個人の活動の範囲内でお楽しみください。</b></p>
     </footer>
