--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -78,6 +78,7 @@
         { search: 'したい', replace: 'ちたい' },
         { search: 'したよ', replace: 'ちたよ' },
         { search: 'した', replace: 'ちた' },
+        { search: 'きんたま', replace: 'きん●ま' },
         { search: 'ぁ', replace: 'ァ' },
         { search: 'ぇ', replace: 'ェ' },
         { search: 'し', replace: 'ち' },
