--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -61,6 +61,7 @@
         'うんた',
         'ましまし',
         'しかし',
+        'すきぴ',
         'たくさん'
     ];
 
@@ -78,6 +79,7 @@
         { search: 'したい', replace: 'ちたい' },
         { search: 'したよ', replace: 'ちたよ' },
         { search: 'した', replace: 'ちた' },
+        { search: 'すき', replace: 'ちゅき' },
         { search: 'やっぱり', replace: 'やっぱち' },
         { search: 'きんたま', replace: 'きん●ま' },
         { search: 'ぁ', replace: 'ァ' },
