--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -80,6 +80,7 @@
         { search: 'したよ', replace: 'ちたよ' },
         { search: 'した', replace: 'ちた' },
         { search: 'すき', replace: 'ちゅき' },
+        { search: 'すぎる', replace: 'しゅぎりゅ' },
         { search: 'やっぱり', replace: 'やっぱち' },
         { search: 'きんたま', replace: 'きん●ま' },
         { search: 'ぁ', replace: 'ァ' },
