--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -72,6 +72,7 @@
         { search: 'なくなった', replace: 'ないなった' },
         { search: 'そういうの', replace: 'そゆの' },
         { search: 'ありが', replace: 'あいが' },
+        { search: 'おさけ', replace: 'おしゃけ' },
         { search: 'すごい', replace: 'しゅごい' },
         { search: 'こっそり', replace: 'こっしょり' },
         { search: '心配した', replace: '心配しちゃァ' },
