--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -73,6 +73,7 @@
         { search: 'そういうの', replace: 'そゆの' },
         { search: 'ありが', replace: 'あいが' },
         { search: 'おさけ', replace: 'おしゃけ' },
+        { search: 'お酒', replace: 'おしゃけ' },
         { search: 'すごい', replace: 'しゅごい' },
         { search: 'こっそり', replace: 'こっしょり' },
         { search: '心配した', replace: '心配しちゃァ' },
@@ -82,6 +83,7 @@
         { search: 'したよ', replace: 'ちたよ' },
         { search: 'した', replace: 'ちた' },
         { search: 'すき', replace: 'ちゅき' },
+        { search: '好き', replace: 'ちゅき' },
         { search: 'すぎ', replace: 'しゅぎ' },
         { search: 'やっぱり', replace: 'やっぱち' },
         { search: 'きんたま', replace: 'きん●ま' },
