--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -43,7 +43,7 @@
 <body>
 
     <h2>うんた語に変換すりゅよ<br>[ver 1.3]</h2>
-    <textarea id="inputText" placeholder="変換したい文字を入力ちてね"></textarea><br><br>
+    <textarea id="inputText" placeholder="変換ちたい文字を入力ちてね"></textarea><br><br>
     <button onclick="convertText()">うんた語に変換</button>
 
     <div id="output"></div>
