--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -70,6 +70,7 @@
     const rules = [
         { search: 'なつき', replace: 'なちゅき' },
         { search: 'なくなった', replace: 'ないなった' },
+        { search: 'たべる', replace: 'たべりゅ' },
         { search: 'そういうの', replace: 'そゆの' },
         { search: 'ありが', replace: 'あいが' },
         { search: 'おさけ', replace: 'おしゃけ' },
