--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -73,6 +73,7 @@
         { search: 'たべる', replace: 'たべりゅ' },
         { search: 'そういうの', replace: 'そゆの' },
         { search: 'ありが', replace: 'あいが' },
+        { search: 'つらい', replace: 'ちゅらい' },
         { search: 'おさけ', replace: 'おしゃけ' },
         { search: 'お酒', replace: 'おしゃけ' },
         { search: 'すごい', replace: 'しゅごい' },
