--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>うんた語に変換すりゅよ(ver 1.3)</title>
+    <title>うんた語に変換すりゅよ(ver 1.31)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,6 +62,7 @@
         'すぎて',
         'ましまし',
         'しかし',
+        'しちゃお',
         'すきぴ',
         'たくさん'
     ];
@@ -73,6 +74,8 @@
         { search: 'たべる', replace: 'たべりゅ' },
         { search: 'そういうの', replace: 'そゆの' },
         { search: 'ありが', replace: 'あいが' },
+        { search: '見つけた', replace: '見ちけた' },
+        { search: 'みつけた', replace: 'みちけた' },
         { search: 'つらい', replace: 'ちゅらい' },
         { search: 'おさけ', replace: 'おしゃけ' },
         { search: 'お酒', replace: 'おしゃけ' },
