--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-    <h2>うんた語に変換すりゅよ<br>[ver 1.3]</h2>
+    <h2>うんた語に変換すりゅよ<br>[ver 1.31]</h2>
     <textarea id="inputText" placeholder="変換ちたい文字を入力ちてね"></textarea><br><br>
     <button onclick="convertText()">うんた語に変換</button>
 
@@ -163,6 +163,8 @@
     <footer>
         <p>【更新履歴】</p>
         <ul>
+            <li><b>ver 1.31 - 2025年4月26日</b>
+            <br>ちょっとだけ更新ちたよ</li>
             <li><b>ver 1.3 - 2025年3月14日</b>
             <br>コピーボタンを設置しちゃァよ。</li>
             <li><b>ver 1.2 - 2025年3月13日</b>
