--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -75,6 +75,7 @@
         { search: 'そういうの', replace: 'そゆの' },
         { search: 'ありが', replace: 'あいが' },
         { search: '見つけた', replace: '見ちけた' },
+        { search: '来た', replace: '来ちゃァ' },
         { search: 'みつけた', replace: 'みちけた' },
         { search: 'つらい', replace: 'ちゅらい' },
         { search: 'おさけ', replace: 'おしゃけ' },
