--- a/conversion-to-unt.html
+++ b/conversion-to-unt.html
@@ -73,6 +73,7 @@
         { search: 'なくなった', replace: 'ないなった' },
         { search: 'たべる', replace: 'たべりゅ' },
         { search: 'そういうの', replace: 'そゆの' },
+        { search: 'ござい', replace: 'ごじゃい' },
         { search: 'ありが', replace: 'あいが' },
         { search: '見つけた', replace: '見ちけた' },
         { search: '来た', replace: '来ちゃァ' },
